# bank_scoring

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  eda.md  main.py  pyproject.toml  requirements.txt
eda/: draft.ipynb  raw.ipynb
output_data/: real_lr_test_result.csv
src/ml/: analyzers.py  binning.py  feature_engineering.py  model_training.py  pipelines.py  preprocessing.py  train_preparation.py
src/tools/: analysis.py  analyzers.py  data_config.py  logger.py
