[tool.poetry]
name = "robofinance"
version = "0.1.0"
description = ""
authors = ["serga <sergandri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"
optbinning = "^0.20.0"
statsmodels = "^0.14.4"
optuna = "^4.1.0"
catboost = "^1.2.7"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
